# Nocturn

./: .env.example  .gitignore  AIS.md  CPS.md  Makefile  PROJECT_STATE.md  README.md  SAD.md  SRS.md  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml
backend/: .gitignore  Dockerfile  openapi.json  pyproject.toml
backend/app/: config.py  main.py  seed.py
backend/app/common/: database.py  dependencies.py  email.py  exceptions.py  redis.py  routerai.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/modules/admin/: repository.py  router.py  schemas.py  service.py
backend/app/modules/ai/: NEXT.md  models.py  repository.py  router.py  schemas.py  service.py  tools.py
backend/app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/notes/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/profile/: router.py  schemas.py  service.py
backend/app/modules/rag/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/tags/: models.py  repository.py  router.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_auth_tables.py  002_create_notes_tags_tables.py  003_create_rag_tables.py  004_create_ai_tables.py  f54c3af4905f_init.py
backend/src/app/: config.py  main.py  seed.py
backend/src/app/common/: dependencies.py  email.py  models.py  redis.py  routerai.py
backend/src/app/middleware/: auth.py  rate_limit.py
backend/src/worker/: main.py
backend/tests/: conftest.py  test_admin_integration.py  test_ai_integration.py  test_auth_integration.py  test_auth_unit.py  test_notes_integration.py  test_profile_integration.py  test_rag_integration.py  test_routerai_unit.py  test_tags_integration.py
backend/tests/integration/: conftest.py  test_admin_flows.py  test_ai_flows.py  test_auth_flows.py  test_notes_flows.py  test_profile_flows.py  test_rag_flows.py  test_tags_flows.py
backend/tests/integration/common/: test_routerai.py
backend/tests/unit/common/: test_email.py
backend/worker/: main.py
docs/: .gitignore  AIS.md  (+30 more)
services/auth/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.db.yaml  entrypoint.sh  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 22ea4a340929_initial_tables.py  a0da1f7dd0c7_initial_tables.py
services/auth/app/: main.py
services/auth/db/: roles.sql  schema.sql
services/auth/migrations/: env.py
services/auth/tests/: conftest.py
(+309 files in other folders)
